# homekit-watering

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  partitions_hap.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/input/: CMakeLists.txt  MoistInput.cpp  MoistInput.h
components/iocfg/: CMakeLists.txt  iocfg.h
components/ioexp/: CMakeLists.txt  MCP23017.cpp  MCP23017.h
components/oled/: CMakeLists.txt  OLEDDisplay.cpp  OLEDDisplay.h  OLEDDisplayFonts.h  SSD1306I2C.cpp  SSD1306I2C.h  conv.py  converted_icons.c  icons._orig.h  icons.h  icons_macros.h
components/output/: CMakeLists.txt  OutputChannel.cpp  OutputChannel.h  OutputChannels.cpp
components/qrcodegen/: CMakeLists.txt  qrcodegen.c
components/ui/: CMakeLists.txt  EvtTimeScreen.cpp  EvtTimeScreen.h  HapQrScreen.cpp  HapQrScreen.h  HapResetScreen.cpp  HapResetScreen.h  HomeScreen.cpp  HomeScreen.h  InfoScreen.cpp  InfoScreen.h  MenuCtx.h  MoistCalScreen.cpp  MoistCalScreen.h  MoistThrScreen.cpp  MoistThrScreen.h  SchedEnableScreen.cpp  SchedEnableScreen.h  Screen.cpp  Screen.h  SetEvtTimeScreen.cpp  SetEvtTimeScreen.h  SettingsMenu.cpp  SettingsMenu.h  TimezoneScreen.cpp  TimezoneScreen.h  UI.cpp  UI.h  WifiProvScreen.cpp  WifiProvScreen.h  WifiStatusScreen.cpp  WifiStatusScreen.h
main/: CMakeLists.txt  ControlServer.cpp  ControlServer.h  EventLog.cpp  EventLog.h  Kconfig.projbuild  MenuScreenCtx.h  OtaServer.cpp  OtaServer.h  OutputChannel.cpp  OutputChannel.h  OutputChannels.cpp  OutputChannels.h  Scheduler.cpp  Scheduler.h  SetEvtTimeScreen.cpp  SetEvtTimeScreen.h  SettingsMenu.cpp  SettingsMenu.h  TimeTypes.h  ValveChannel.cpp  ValveChannel.h  WebBase.cpp  WebBase.h  app_main.c  app_main.cpp  app_wifi_handler.cpp  app_wifi_handler.h  homeScreen.cpp  homeScreen.h  iocfg.h  lvgl_demo_ui.c  lvgl_demo_ui.h  menuScreen.cpp  menuScreen.h  screen.h  setOnTimeScreen.cpp  setOnTimeScreen.h  ui.cpp  ui.h
